# WinAPDev

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run  run.py
docs/: readMe.txt
src/core/: app_structure.py  batch_file_creator.py  binaries.py  certificate_manager.py  cli_arguments.py  console_logger.py  constants.py  env_path_manager.py  extractor.py  file_downloader.py  file_logger.py  helper.py  logger.py  path_manager.py  php_env_launcher.py  prerequisite.py  server.py  service.py  system_paths.py  templates.py  virtual_host.py  windows_host_manager.py
src/includes/templates/: httpd.conf  php.ini
