[project]
name = "win-ap-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.8.3",
    "colorama==0.4.6",
    "idna>=3.10",
    "psutil>=7.0.0",
    "pycodestyle>=2.14.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "urllib3>=2.5.0",
]
